# AdaR

./: .gitignore  README.md  pyproject.toml  setup_env.sh  synthesis.sh
analysis_unknown/: config.yaml  generate_cot_with_code.yaml  generate_dpo_pairs.yaml  generate_rft.yaml  generate_template_and_code.yaml  ids.txt  wait_to_be_tested_by_shuffle.ids
analysis_unknown/scripts/: LLM_infer.py  LLM_infer2.py  check_ans.py  create_data.ipynb  filter_data.ipynb  hidden_analysis.ipynb  hidden_analysis2.ipynb  parse_generation.ipynb
math_training/: check_ans.py  config.yaml  cpt.sh  dpo.sh  dpo2.sh  dpo3.sh  merge_lora_model.py  rft_7b_lora_2.sh  sft.sh  sft_1.5B.sh  sft_1.5B_instruct.sh  sft_7b_lora.sh  sft_orca.sh  test.sh  test_base.sh  test_full.sh
scripts/: LLM_infer.py  config.yaml  execute_EVS.py  generate_cot_with_code.yaml  generate_paraphrase.yaml  generate_prompt_for_cot_with_code.py  generate_prompt_for_paraphrase.py  generate_prompt_for_template_code.py  generate_rft.yaml  generate_template_and_code.yaml  merge_result.py  parse_generation_result.py  perturb_variables.py  utils.py
