[project]
name = "uncertainty-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "click>=8.1.8",
    "gpustat>=1.1.1",
    "pysocks>=1.7.1",
    "vllm==0.8.4",
    "llamafactory",
    "verl",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
llamafactory = { path = "/home/nfs03/laizj/code/LLaMA-Factory" }
verl = { path = "/home/nfs03/laizj/code/verl" }

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
