[project]
name = "uncertainty-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "vllm==0.8.4",
    "flash-attn>=2.7.4.post1",
    "flashinfer-python<0.2.3",
    "llamafactory",
    "verl",
    "training",
    "deepspeed>=0.16.7",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
llamafactory = { path = "/home/nfs03/laizj/code/LLaMA-Factory" }
verl = { path = "/home/nfs03/laizj/code/verl" }
training = { path = "../../../../nfs03/laizj/code/util/Training" }

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
