[project]
name = "uncertainty-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "trl",
    "deepspeed>=0.16.7",
    "pyarrow==20.0.0",
    "pysocks>=1.7.1",
    "setuptools>=80.4.0",
    "vllm==0.8.5",
    "llamafactory",
    "verl",
    "av==14.4.0",
    "flash-attn==2.7.4.post1",
    "wrapt-timeout-decorator>=1.5.1",
    "tensorboard>=2.19.0",
    "flashinfer-python==0.2.2",
    "hydra-core==1.3.2",
    "sacrebleu>=2.5.1",
    "nltk>=3.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
llamafactory = { path = "../LLaMA-Factory", editable = true}
verl = { path = "../verl", editable = true}

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
    "ijson>=3.4.0",
    "ipykernel>=6.29.5",
    "modelscope>=1.27.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
